# pysmart

./: pyproject.toml
pysmart/: main.py
pysmart/models/: atasmart.py  disk.py  flags.py
